[tool.poetry]
name = "pypokergui"
version = "0.1.0"
description = ""
authors = ["Bhaskar <bha6kar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pypokerengine = "^1.0.1"
tornado = "^6.4"
click = "^8.1.7"
pyyaml = "^6.0.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
seaborn = "^0.13.0"
xgboost = "^2.0.2"
imblearn = "^0.0"
keras = "^3.0.1"
mlxtend = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
